--- a/src/stubs/sass/config/_fonts.scss
+++ b/src/stubs/sass/config/_fonts.scss
@@ -20,7 +20,7 @@
 // $config: (
 //     'used-fonts': (),
 //     'fonts-stack': $fonts-stack,
-//     'fonts-path': '../../fonts/',
+//     'fonts-path': '../fonts/',
 // );
 
 // @include config.merge('fonts', $config);
