remove warning with css var generator

--- a/src/sass/tools/mixins/_create-css-var-responsive.scss
+++ b/src/sass/tools/mixins/_create-css-var-responsive.scss
@@ -6,19 +6,22 @@
 
 @mixin create-css-var-responsive($base, $config, $unit: false) {
   @if map.has-key($config, config.get("breakpoints.default")) {
-    @include create-css-var(
-      $base,
-      map.get($config, config.get("breakpoints.default")),
-      $unit
-    );
+    & {
+      @include create-css-var(
+        $base,
+        map.get($config, config.get("breakpoints.default")),
+        $unit
+      );
+    }
   }
 
   $config: map.remove($config, config.get("breakpoints.default"));
-
   @each $breakpoint, $value in config.get("breakpoints.breakpoints") {
     @if map.has-key($config, $breakpoint) {
       @include mq($until: $breakpoint) {
-        @include create-css-var($base, map.get($config, $breakpoint), $unit);
+        & {
+          @include create-css-var($base, map.get($config, $breakpoint), $unit);
+        }
       }
     }
   }
