--- a/tests/sass/app.scss
+++ b/tests/sass/app.scss
@@ -1,3 +1,4 @@
 @use "../../src/sass/index";
 @use "../../src/sass/tools/mixins/import-fonts" as fonts;
+@use "base/css-var";
 @use "./tools/tools" as *;
