--- a/src/sass/lib/_mq.scss
+++ b/src/sass/lib/_mq.scss
@@ -281,8 +281,10 @@ $media-type: all !default;
   $new-breakpoint: (
     $name: $width,
   );
-  $breakpoints: map.merge($breakpoints, $new-breakpoint) !global;
-  $breakpoints: _map-sort-by-value($breakpoints) !global;
+
+  @include config.set("breakpoints.breakpoints.#{$name}", $new-breakpoint);
+  $breakpoints: _map-sort-by-value(config.get("breakpoints.breakpoints"));
+  @include config.set("breakpoints.breakpoints", $breakpoints);
 }
 
 /// Show the active breakpoint in the top right corner of the viewport
