--- a/src/sass/tools/_tools.scss
+++ b/src/sass/tools/_tools.scss
@@ -20,6 +20,7 @@
 @forward "functions/spacing";
 @forward "functions/str-replace";
 @forward "functions/str-split";
+@forward "functions/transition";
 
 /*
 * Mixins
