--- a/tests/sass/tools/_tools.scss
+++ b/tests/sass/tools/_tools.scss
@@ -18,6 +18,7 @@
 @use "functions/spacing";
 @use "functions/str-replace";
 @use "functions/list-concat";
+@use "functions/transition";
 
 /*
 * Mixins
